--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widget.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widget.phtml
@@ -10,12 +10,12 @@
 /* @var $this Mage_Core_Block_Template */
 ?>
 <script type="text/javascript">//<[CDATA[
-(function($, window, document) {
-    "use strict";
+(function($) {
+    'use strict';
     $(function() {
         $('#product_edit_form').bind('product:changeAttributeSet', function(event, attributeSetId) {
             var $form = $(this);
-            var uri = document.location.href.replace(/(\/|&)?set(\/|=)\d+/g, '');
+            var uri = document.location.href.replace(/(\/|&)?\bset(\/|=)\d+/g, '');
             uri += /\?/.test(uri) ? '&' : '?';
             uri += 'set=' + window.encodeURIComponent(attributeSetId);
             $form.attr('action', uri).submit();
@@ -24,19 +24,19 @@
         $('#attribute-set-info').dialog({
             title: '<?php echo Mage::helper('Mage_Catalog_Helper_Data')->__('Select Attribute Set'); ?>',
             autoOpen: false,
-            id: '<?php echo strtolower($this->getNameInLayout()) ?>',
+            id: '<?php echo $this->getJsId() ?>',
             minWidth: 560,
             modal: true,
             resizable: false,
             buttons: [{
                 text: '<?php echo Mage::helper('Mage_Catalog_Helper_Data')->__('Cancel'); ?>',
-                id: '<?php echo strtolower($this->getNameInLayout()) . '-close-button' ?>',
+                id: '<?php echo $this->getJsId('close-button') ?>',
                 click: function() {
                     $(this).dialog("close");
                 }
             }, {
                 text: '<?php echo Mage::helper('Mage_Catalog_Helper_Data')->__('Apply'); ?>',
-                id: '<?php echo strtolower($this->getNameInLayout()) . '-apply-button' ?>',
+                id: '<?php echo $this->getJsId('apply-button') ?>',
                 click: function() {
                     var $attibuteSetId = $(this).find('#attribute_set_id');
                     $('#product_edit_form').trigger('product:changeAttributeSet', [$attibuteSetId.val()]);
@@ -44,6 +44,6 @@
             }]
         });
     });
-})(jQuery, window, document);
+})(jQuery);
 //]]>
 </script>
