--- a/app/code/core/Mage/CatalogSearch/view/frontend/form.mini.phtml
+++ b/app/code/core/Mage/CatalogSearch/view/frontend/form.mini.phtml
@@ -8,11 +8,16 @@
  * @license     {license_link}
  */
 ?>
-<form id="search_mini_form" action="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getResultUrl() ?>" method="get">
+<form id="search_mini_form" action="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getResultUrl() ?>"
+      method="get">
     <div class="form-search">
         <label for="search"><?php echo $this->__('Search:') ?></label>
-        <input id="search" type="text" name="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getQueryParamName() ?>" value="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getEscapedQueryText() ?>" class="input-text" />
-        <button type="submit" title="<?php echo $this->__('Search') ?>" class="button"><span><span><?php echo $this->__('Search') ?></span></span></button>
+        <input id="search" type="text"
+               name="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getQueryParamName() ?>"
+               value="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getEscapedQueryText() ?>"
+               class="input-text"/>
+        <button type="submit" title="<?php echo $this->__('Search') ?>" class="button">
+            <span><span><?php echo $this->__('Search') ?></span></span></button>
         <div id="search_autocomplete" class="search-autocomplete"></div>
         <script type="text/javascript">
         //<![CDATA[
