--- a/app/code/core/Mage/Page/view/frontend/html/head.phtml
+++ b/app/code/core/Mage/Page/view/frontend/html/head.phtml
@@ -8,22 +8,27 @@
  * @license     {license_link}
  */
 ?>
-<meta http-equiv="Content-Type" content="<?php echo $this->getContentType() ?>" />
+<meta http-equiv="Content-Type" content="<?php echo $this->getContentType() ?>"/>
 <title><?php echo $this->getTitle() ?></title>
-<meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
-<meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
-<meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
-<link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
-<link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
+<meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>"/>
+<meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>"/>
+<meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>"/>
+<link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon"/>
+<link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon"/>
 <!--[if lt IE 7]>
 <script type="text/javascript">
-//<![CDATA[
+    //<![CDATA[
     var BLANK_URL = '<?php echo $this->getSkinUrl('blank.html') ?>';
     var BLANK_IMG = '<?php echo $this->getSkinUrl('spacer.gif') ?>';
 //]]>
 </script>
 <![endif]-->
 <?php echo $this->getCssJsHtml() ?>
-<?php echo $this->getChildHtml() ?>
-<?php echo $this->helper('Mage_Core_Helper_Js')->getTranslatorScript() ?>
-<?php echo $this->getIncludes() ?>
+<script type="text/javascript" src="/pub/lib/jquery/jquery.js"></script>
+<script type="text/javascript" src="/pub/lib/jquery/head.js"></script>
+<script type="text/javascript" src="/pub/lib/jquery/jquery.cookie.js"></script>
+<script type="text/javascript" src="/pub/lib/mage/mage.js"></script>
+
+
+
+
