Fix MAGETWO-1185: javascript refactor - add install javascript refactory to EE and Pro version - remove javascript to set target attribute, and add target attribute to html element directly

--- a/app/design/install/default/enterprise/Mage_Install/page.phtml
+++ b/app/design/install/default/enterprise/Mage_Install/page.phtml
@@ -16,27 +16,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title><?php echo Mage::helper('Mage_Install_Helper_Data')->__('Magento Installation Wizard') ?></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title><?php echo Mage::helper('Mage_Install_Helper_Data')->__('Magento Installation Wizard') ?></title>
 
-<link rel="icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico') ?>" type="image/x-icon" />
-<link rel="shortcut icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico') ?>" type="image/x-icon" />
+    <link rel="icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico') ?>" type="image/x-icon"/>
+    <link rel="shortcut icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico') ?>" type="image/x-icon"/>
 
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('jquery/jquery-1.7.1.min.js') ?>"></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('mage/jquery-no-conflict.js') ?>"></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('prototype/prototype.js') ?>"></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('prototype/validation.js') ?>"></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('scriptaculous/effects.js') ?>"></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('mage/translate.js') ?>" ></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('varien/js.js') ?>"></script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('varien/form.js') ?>"></script>
-<link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/reset.css') ?>" type="text/css" media="all" />
-<link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/boxes.css') ?>" type="text/css" media="all" />
-<link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/clears.css') ?>" type="text/css" media="all" />
-<!--[if IE]><link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/iestyles.css') ?>" type="text/css" media="all" /><![endif]-->
-<!--[if lt IE 7]><link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/ie7minus.css') ?>" type="text/css" media="all" /><![endif]-->
+    <!--<script type="text/javascript" src="-->
+    <?php //echo $this->getSkinUrl('prototype/prototype.js') ?><!--"></script>-->
+    <!--<script type="text/javascript" src="-->
+    <?php //echo $this->getSkinUrl('prototype/validation.js') ?><!--"></script>-->
+    <!--<script type="text/javascript" src="-->
+    <?php //echo $this->getSkinUrl('scriptaculous/effects.js') ?><!--"></script>-->
+    <!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('mage/translate.js') ?><!--" ></script>-->
+    <!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('varien/js.js') ?><!--"></script>-->
+    <!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('varien/form.js') ?><!--"></script>-->
+    <script type="text/javascript" src="/pub/lib/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/pub/lib/jquery/head.js"></script>
+    <script type="text/javascript" src="/pub/lib/jquery/jquery.cookie.js"></script>
+    <script type="text/javascript" src="/pub/lib/mage/mage.js"></script>
+    <link rel="stylesheet" href="/pub/lib/mage/components/install/mage-js-style.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/reset.css') ?>" type="text/css" media="all"/>
+    <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/boxes.css') ?>" type="text/css" media="all"/>
+    <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/clears.css') ?>" type="text/css" media="all"/>
+    <!--[if IE]>
+    <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/iestyles.css') ?>" type="text/css" media="all"/>
+    <![endif]-->
+    <!--[if lt IE 7]>
+    <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/ie7minus.css') ?>" type="text/css" media="all"/>
+    <![endif]-->
 
-<?php echo $this->helper('Mage_Core_Helper_Js')->getTranslatorScript() ?>
+    <?php //echo $this->helper('Mage_Core_Helper_Js')->getTranslatorScript() ?>
 
 </head>
 
@@ -93,12 +103,10 @@
     <div class="footer-container">
         <div class="footer">
         <p class="legality">
-            <?php echo Mage::helper('Mage_Install_Helper_Data')->__('Help Us to Keep Magento Healthy') ?> - <a href="https://support.varien.com/" id="bug_tracking_link"><strong><?php echo Mage::helper('Mage_Install_Helper_Data')->__('Report All Bugs') ?></strong></a> <?php echo Mage::helper('Mage_Install_Helper_Data')->__('(ver. %s)', Mage::getVersion()) ?><br/>
-<script type="text/javascript">
-//<![CDATA[
-    $('bug_tracking_link').target = "varien_external";
-//]]>
-</script>
+            <?php echo Mage::helper('Mage_Install_Helper_Data')->__('Help Us to Keep Magento Healthy') ?> - <a
+            href="https://support.varien.com/"
+            target="varien_external"><strong><?php echo Mage::helper('Mage_Install_Helper_Data')->__('Report All Bugs') ?></strong></a> <?php echo Mage::helper('Mage_Install_Helper_Data')->__('(ver. %s)', Mage::getVersion()) ?>
+            <br/>
             <?php echo Mage::helper('Mage_Install_Helper_Data')->__('Magento is a trademark of Magento Inc. Copyright &copy; %s Magento Inc.', date('Y')) ?>
         </p>
         </div>
