--- a/app/code/core/Mage/Checkout/view/frontend/cart/sidebar.phtml
+++ b/app/code/core/Mage/Checkout/view/frontend/cart/sidebar.phtml
@@ -44,7 +44,7 @@
     <?php if($_cartQty && $this->isPossibleOnepageCheckout()): ?>
     <div class="actions">
         <?php echo $this->getChildHtml('extra_actions') ?>
-        <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button" onclick="setLocation('<?php echo $this->getCheckoutUrl() ?>')"><span><span><?php echo $this->__('Checkout') ?></span></span></button>
+        <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button"><span><span><?php echo $this->__('Checkout') ?></span></span></button>
     </div>
     <?php endif ?>
     <?php $_items = $this->getRecentItems() ?>
@@ -55,7 +55,15 @@
             <?php echo $this->getItemHtml($_item) ?>
         <?php endforeach; ?>
         </ol>
-        <script type="text/javascript">decorateList('cart-sidebar', 'none-recursive')</script>
+        <script type="text/javascript">
+            mage.event.observe('mage.checkout.initialize', function (e, o) {
+                o.cartId = '#cart-sidebar',
+                    o.nonRecursive='nonRecursive',
+                    o.checkOutUrl = '<?php echo $this->getCheckoutUrl();?>',
+                    o.title = '<?php echo $this->__('Checkout') ?>'
+            });
+            mage.load.jsSync('/pub/lib/mage/decorate.js','/pub/lib/mage/components/checkout/frontend/cart/sidebar.js');
+        </script>
     <?php else: ?>
         <p class="empty"><?php echo $this->__('You have no items in your shopping cart.') ?></p>
     <?php endif ?>
