Fixed MAGETWO-2352: Attribute set name field is prepopulated by 'undefined' value [IE]

--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/js.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/js.phtml
@@ -306,7 +306,7 @@ function updateRequriedOptions()
 
 function saveAttributeInNewSet(promptMessage, errorMessage)
 {
-    var newAttributeSetName = prompt(promptMessage);
+    var newAttributeSetName = prompt(promptMessage, '');
 
     if (newAttributeSetName == null) {
         return;
