Fixed MAGETWO-2348: Validation for attribute set is missing while creating attribute set from product page

--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/js.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/attribute/js.phtml
@@ -317,6 +317,12 @@ function saveAttributeInNewSet(promptMessage, errorMessage)
         return;
     }
 
+    var validator = Validation.get('validate-no-html-tags');
+    if (!validator.test(newAttributeSetName)) {
+        alert(validator.error);
+        return;
+    }
+
     var newAttributeSetNameInputId = 'new_attribute_set_name';
 
     if ($(newAttributeSetNameInputId)) {
