Fix MAGETWO-1185: javascript refactor - newsletter javascript refactor - remove existing prototype based javascript from head

--- a/app/code/core/Mage/Page/view/frontend/html/head.phtml
+++ b/app/code/core/Mage/Page/view/frontend/html/head.phtml
@@ -28,6 +28,7 @@
 <script type="text/javascript" src="/pub/lib/jquery/head.js"></script>
 <script type="text/javascript" src="/pub/lib/jquery/jquery.cookie.js"></script>
 <script type="text/javascript" src="/pub/lib/mage/mage.js"></script>
+<link rel="stylesheet" href="/pub/lib/mage/components/install/mage-js-style.css" type="text/css" media="all"/>
 
 
 
