--- a/app/design/frontend/enterprise/default/Mage_Newsletter/subscribe.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Newsletter/subscribe.phtml
@@ -10,15 +10,24 @@
 ?>
 <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail">
     <div class="form-subscribe">
-    <div class="form-subscribe-header">
-        <label for="newsletter"><?php echo $this->__('Sign Up for Our Newsletter:') ?></label>
-    </div>
-        <div class="v-fix"><input name="email" type="text" id="newsletter" value="<?php echo $this->__('Enter your email address') ?>" onclick="this.value=='<?php echo $this->__('Enter your email address') ?>'?this.value='':''" onblur="this.value==''?this.value='<?php echo $this->__('Enter your email address') ?>':''" class="input-text required-entry validate-email" /></div>
-        <button type="submit" class="button" title="<?php echo $this->__('Subscribe') ?>"><span><span><?php echo $this->__('Subscribe') ?></span></span></button>
+        <div class="form-subscribe-header">
+            <label for="newsletter"><?php echo $this->__('Sign Up for Our Newsletter:') ?></label>
+        </div>
+        <div class="v-fix"><input name="email" type="text" id="newsletter"
+                                  value="<?php echo $this->__('Enter your email address') ?>"
+                                  class="input-text" data-validate="{required:true,validateEmail:true}"/></div>
+        <button type="submit" class="button" title="<?php echo $this->__('Subscribe') ?>">
+            <span><span><?php echo $this->__('Subscribe') ?></span></span></button>
     </div>
 </form>
 <script type="text/javascript">
-//<![CDATA[
-    var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail');
-//]]>
+    //<![CDATA[
+    mage.event.observe('mage.newsletter.initialize', function (event, initData) {
+        initData.newsletterId = '#newsletter-validate-detail';
+        initData.newsletterInputId = '#newsletter';
+        initData.placeholderMessage = '<?php echo $this->__('Enter your email address') ?>';
+    });
+    mage.load.initValidate();
+    mage.load.js('/pub/lib/mage/components/newsletter/frontend/newsletter.js');
+    //]]>
 </script>
