--- a/app/code/core/Mage/Newsletter/view/frontend/subscribe.phtml
+++ b/app/code/core/Mage/Newsletter/view/frontend/subscribe.phtml
@@ -18,16 +18,26 @@
                 <label for="newsletter"><?php echo $this->__('Sign Up for Our Newsletter:') ?></label>
             </div>
             <div class="input-box">
-               <input type="text" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email" />
+                <input type="text" name="email" id="newsletter"
+                       title="<?php echo $this->__('Sign up for our newsletter') ?>"
+                       value="<?php echo $this->__('Enter your email address') ?>"
+                       class="input-text" data-validate="{required:true,validateEmail:true}"/>
             </div>
             <div class="actions">
-                <button type="submit" title="<?php echo $this->__('Subscribe') ?>" class="button"><span><span><?php echo $this->__('Subscribe') ?></span></span></button>
+                <button type="submit" title="<?php echo $this->__('Subscribe') ?>" class="button">
+                    <span><span><?php echo $this->__('Subscribe') ?></span></span></button>
             </div>
         </div>
     </form>
     <script type="text/javascript">
-    //<![CDATA[
-        var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail');
-    //]]>
+        //<![CDATA[
+        mage.event.observe('mage.newsletter.initialize', function (event, initData) {
+            initData.newsletterId = '#newsletter-validate-detail';
+            initData.newsletterInputId = '#newsletter';
+            initData.placeholderMessage = '<?php echo $this->__('Enter your email address') ?>';
+        });
+        mage.load.initValidate();
+        mage.load.js('/pub/lib/mage/components/newsletter/frontend/newsletter.js');
+        //]]>
     </script>
 </div>
