--- a/app/design/frontend/enterprise/default/Mage_CatalogSearch/form.mini.phtml
+++ b/app/design/frontend/enterprise/default/Mage_CatalogSearch/form.mini.phtml
@@ -8,15 +8,21 @@
  * @license     {license_link}
  */
 ?>
-<form id="search_mini_form" action="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getResultUrl() ?>" method="get">
-<div class="form-search">
-    <label for="search"><?php echo $this->__('Search site:') ?></label><input id="search" type="text" name="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getQueryParamName() ?>" value="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getEscapedQueryText() ?>" class="input-text" />&nbsp;<button type="submit" title="<?php echo $this->__('Go') ?>" class="button"><span><span><?php echo $this->__('Go') ?></span></span></button><a href="<?php echo Mage::helper('Mage_CatalogSearch_Helper_Data')->getAdvancedSearchUrl(); ?>"><?php echo $this->__('Advanced Search'); ?></a>
-    <div id="search_autocomplete" class="search-autocomplete"></div>
-    <script type="text/javascript">
-    //<![CDATA[
-        var searchForm = new Varien.searchForm('search_mini_form', 'search', '<?php echo $this->__('Enter search keyword') ?>');
-        searchForm.initAutocomplete('<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getSuggestUrl() ?>', 'search_autocomplete');
-    //]]>
-    </script>
-</div>
+<form id="search_mini_form" action="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getResultUrl() ?>"
+      method="get">
+    <div class="form-search">
+        <label for="search"><?php echo $this->__('Search site:') ?></label><input id="search" type="text"
+                                                                                  name="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getQueryParamName() ?>"
+                                                                                  value="<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getEscapedQueryText() ?>"
+                                                                                  class="input-text"/>&nbsp;
+        <button type="submit" title="<?php echo $this->__('Go') ?>" class="button">
+            <span><span><?php echo $this->__('Go') ?></span></span></button>
+        <a href="<?php echo Mage::helper('Mage_CatalogSearch_Helper_Data')->getAdvancedSearchUrl(); ?>"><?php echo $this->__('Advanced Search'); ?></a>
+
+        <div id="search_autocomplete" class="search-autocomplete"></div>
+        <script type="text/javascript">
+            //<![CDATA[
+            //]]>
+        </script>
+    </div>
 </form>
