Fixed MAGETWO-2339: Changing attribute set opens 'Create Product Settings' page if some products were selected on the Product Relation tab

--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widget.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widget.phtml
@@ -15,7 +15,7 @@
     $(function() {
         $('#product_edit_form').bind('product:changeAttributeSet', function(event, attributeSetId) {
             var $form = $(this);
-            var uri = document.location.href.replace(/(\/|&)?\bset(\/|=)\d+/g, '');
+            var uri = document.location.href.replace(/(\/|&|\?)?\bset(\/|=)\d+/g, '').replace('#', '');
             uri += /\?/.test(uri) ? '&' : '?';
             uri += 'set=' + window.encodeURIComponent(attributeSetId);
             $form.attr('action', uri).submit();
