Fix MAGETWO-1185: javascript refactor - Locale settings via Java Script

--- a/app/design/frontend/enterprise/default/Mage_CatalogSearch/form.mini.phtml
+++ b/app/design/frontend/enterprise/default/Mage_CatalogSearch/form.mini.phtml
@@ -22,6 +22,8 @@
         <div id="search_autocomplete" class="search-autocomplete"></div>
         <script type="text/javascript">
             //<![CDATA[
+            //var searchForm = new Varien.searchForm('search_mini_form', 'search', '<?php echo $this->__('Enter search keyword') ?>');
+            //searchForm.initAutocomplete('<?php echo $this->helper('Mage_CatalogSearch_Helper_Data')->getSuggestUrl() ?>', 'search_autocomplete');
             //]]>
         </script>
     </div>
