--- a/app/code/core/Mage/Page/view/frontend/html/head.phtml
+++ b/app/code/core/Mage/Page/view/frontend/html/head.phtml
@@ -23,6 +23,15 @@
 //]]>
 </script>
 <![endif]-->
+
+<script type="text/javascript">
+    //<![CDATA[
+    mage.event.observe('mage.load.language', function (event) {
+        mage.load.language('<?php echo substr(Mage::app()->getLocale()->getLocaleCode(), 0, 2)?>');
+    });
+    //]]>
+</script>
+
 <?php echo $this->getCssJsHtml() ?>
 <script type="text/javascript" src="/pub/lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="/pub/lib/jquery/head.js"></script>
