--- a/app/design/frontend/enterprise/default/Mage_Checkout/cart/cartheader.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Checkout/cart/cartheader.phtml
@@ -87,5 +87,10 @@
                 <?php endif ?>
         </div>
     </div>
+    <script type="text/javascript">
+        //Enterprise.TopCart.initialize('topCartContent');
+        // Below can be used to show minicart after item added
+        // Enterprise.TopCart.showCart(7);
+    </script>
     <?php endif;?>
 </div>
