Implement MAGETWO-1185: javascript refactor - addedproduct_view.js - refactored checout_topcart.js,sidebar.js,form_mini.js -  refactored sidebar.phtml,form.mini.phtml,default.phtml

--- a/app/code/core/Mage/Page/view/frontend/js/cookie.phtml
+++ b/app/code/core/Mage/Page/view/frontend/js/cookie.phtml
@@ -18,7 +18,10 @@
 
 <script type="text/javascript">
 //<![CDATA[
-Mage.Cookies.path     = '<?php echo $this->getPath()?>';
-Mage.Cookies.domain   = '<?php echo $this->getDomain()?>';
+mage.event.observe('mage.cookie.initialize', function (e, o) {
+    o.path = '<?php echo $this->getPath()?>',
+    o.domain = '<?php echo $this->getDomain()?>'
+});
+mage.load.jsSync('/pub/lib/mage/components/cookie/cookie.js');
 //]]>
 </script>
