--- a/app/code/core/Mage/Checkout/view/frontend/cart/sidebar.phtml
+++ b/app/code/core/Mage/Checkout/view/frontend/cart/sidebar.phtml
@@ -58,11 +58,13 @@
         <script type="text/javascript">
             mage.event.observe('mage.checkout.initialize', function (e, o) {
                 o.cartId = '#cart-sidebar',
-                    o.nonRecursive='nonRecursive',
+                    o.nonRecursive = 'nonRecursive',
                     o.checkOutUrl = '<?php echo $this->getCheckoutUrl();?>',
-                    o.title = '<?php echo $this->__('Checkout') ?>'
+                    o.title = '<?php echo $this->__('Checkout') ?>',
+                    o.confirmMessage = '<?php echo $this->__('Are you sure you would like to remove this item from the shopping cart?') ?>;',
+                    o.closeBtnTitle = '<?php echo $this->__('Remove This Item')?>';
             });
-            mage.load.jsSync('/pub/lib/mage/decorate.js','/pub/lib/mage/components/checkout/frontend/cart/sidebar.js');
+            mage.load.jsSync('/pub/lib/mage/decorate.js', '/pub/lib/mage/components/checkout/frontend/cart/sidebar.js');
         </script>
     <?php else: ?>
         <p class="empty"><?php echo $this->__('You have no items in your shopping cart.') ?></p>
