--- a/app/design/frontend/enterprise/default/Mage_Checkout/cart/cartheader.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Checkout/cart/cartheader.phtml
@@ -88,9 +88,18 @@
         </div>
     </div>
     <script type="text/javascript">
-        //Enterprise.TopCart.initialize('topCartContent');
-        // Below can be used to show minicart after item added
-        // Enterprise.TopCart.showCart(7);
+
+        mage.event.observe('mage.checkout.initialize', function (e, o) {
+            o.cartId = '#cart-sidebar',
+                o.nonRecursive = 'nonRecursive',
+                o.checkOutUrl = '<?php echo $this->getCheckoutUrl();?>',
+                o.title = '<?php echo $this->__('Checkout') ?>',
+                o.container = '#topCartContent',
+                o.closeButton = '.close-btn'
+        });
+        mage.load.jsSync('/pub/lib/mage/decorate.js', '/pub/lib/mage/components/checkout/frontend/cart/sidebar.js', '/pub/lib/mage/components/enterprise/default/checkout_topcart.js');
+
+
     </script>
     <?php endif;?>
 </div>
