--- a/app/design/frontend/pro/default/Mage_Checkout/cart/sidebar.phtml
+++ b/app/design/frontend/pro/default/Mage_Checkout/cart/sidebar.phtml
@@ -33,8 +33,7 @@
             <?php echo $this->getItemHtml($_item) ?>
         <?php endforeach; ?>
         </ol>
-        <script type="text/javascript">decorateList('cart-sidebar', 'none-recursive')</script>
-    <?php else: ?>
+        <?php else: ?>
         <p class="empty"><?php echo $this->__('You have no items in your shopping cart.') ?></p>
     <?php endif ?>
     <?php if ($_cartQty>0): ?>
@@ -59,7 +58,7 @@
                     </p>
                 </div>
                 <?php if($this->isPossibleOnepageCheckout()): ?>
-                    <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button" onclick="setLocation('<?php echo $this->getCheckoutUrl() ?>')"><span><span><?php echo $this->__('Checkout') ?></span></span></button>
+                    <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button"><span><span><?php echo $this->__('Checkout') ?></span></span></button>
                     <?php //echo $this->getChildHtml('extra_actions') ?>
                 <?php endif ?>
         </div>
