Fix MAGETWO-1993: javascript refactor - added target to a element as an attribute

--- a/app/design/frontend/enterprise/default/Mage_Newsletter/subscribe.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Newsletter/subscribe.phtml
@@ -26,6 +26,7 @@
         initData.newsletterId = '#newsletter-validate-detail';
         initData.newsletterInputId = '#newsletter';
         initData.placeholderMessage = '<?php echo $this->__('Enter your email address') ?>';
+        initData.errorClass = 'mage-ee-error';
     });
     mage.load.initValidate();
     mage.load.js('/pub/lib/mage/components/newsletter/frontend/newsletter.js');
