--- a/app/design/frontend/pro/default/Mage_Page/html/footer.phtml
+++ b/app/design/frontend/pro/default/Mage_Page/html/footer.phtml
@@ -13,7 +13,10 @@
         <?php echo $this->getChildHtml() ?>
     </div>
     <div class="footer2">
-        <p class="bugs"><?php echo $this->__('Help Us to Keep Magento Healthy') ?> - <a href="http://www.magentocommerce.com/bug-tracking" onclick="this.target='_blank'"><strong><?php echo $this->__('Report All Bugs') ?></strong></a> <?php echo $this->__('(ver. %s)', Mage::getVersion()) ?></p>
+        <p class="bugs"><?php echo $this->__('Help Us to Keep Magento Healthy') ?> - <a
+            href="http://www.magentocommerce.com/bug-tracking"
+            target="_blank"><strong><?php echo $this->__('Report All Bugs') ?></strong></a> <?php echo $this->__('(ver. %s)', Mage::getVersion()) ?>
+        </p>
         <address><?php echo $this->getCopyright() ?></address>
     </div>
 </div>
