--- a/pub/lib/mage/components/install/mage-js-style.css
+++ b/pub/lib/mage/components/install/mage-js-style.css
@@ -50,6 +50,23 @@ div.mage-ee-error {
     padding: 3px 0 0 !important;
 }
 
+input.mage-ee-pro-error {
+    background: none repeat scroll 0 0 #FFF7F5 !important;
+    border: 1px solid #F15C22 !important;
+}
+
+div.mage-ee-pro-error {
+    background: url("/pub/media/skin/frontend/pro/default/default/en_US/images/validation_advice_bg.gif") no-repeat scroll 2px 0 transparent;
+    clear: both;
+    color: #F15C22;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 13px;
+    margin: 3px 0 0;
+    min-height: 13px;
+    padding-left: 17px;
+}
+
 input.mage-ce-modern-error {
     background: none repeat scroll 0 0 #FAEBE7 !important;
     border: 1px solid #EB340A !important;
